# PurrSor-Public-Release

./: README.md  __main__.py  pet.py  pyproject.toml  requirment.txt
config/: default_config.yml
purrsor/: __main__.py  purr.py
purrsor/utils/: configs.py  images.py
